--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue lighten-2">
             <a href="/" class="brand-logo">Leks Works</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="./works.html">Works</a></li>
