--- a/works.html
+++ b/works.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue lighten-2">
             <a href="./index.html" class="brand-logo">Leks Works</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li class="active"><a href="./works.html">Works</a></li>
