--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Leks Works</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script async src="//api.beta.glia.com/salemove_integration.js"></script>
+    <script async src="//api.at.samo.io/salemove_integration.js"></script>
 </head>
 <body>
     <nav>
