--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <body>
     <nav>
         <div class="nav-wrapper blue lighten-2">
-            <a href="/" class="brand-logo">Leks Works</a>
+            <a href="./index.html" class="brand-logo">Leks Works</a>
+            <a href="javascript:;" data-target="hamburger" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="./works.html">Works</a></li>
             </ul>
         </div>
     </nav>
+
+    <ul class="sidenav" id="hamburger">
+        <li><a href="./works.html">Works</a></li>
+    </ul>
 
     <div class="row">
         <div class="col s12 m6">
