Add materialize js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Leks Works</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script async src="//api.at.samo.io/salemove_integration.js"></script>
 </head>
 <body>
