--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => M.Sidenav.init(document.getElementById('hamburger')));
+    </script>
 </body>
 </html>
