--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+    <script>
+        window.getGliaContext = function() {
+            return {
+                oidcToken: 'eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwiYWNjZXNzX3Rva2VuIjoicmFuZG9tX2FjY2Vzc190b2tlbiIsInJlZnJlc2hfdG9rZW4iOiJyYW5kb21fcmVmcmVzaF90b2tlbiIsImlhdCI6MTUxNjIzOTAyMn0.NmK5uF-v5bAg_xK0Ukx3A5GwHFBja-TNKVraMpww5nZXzgdjEPrz5edNhHDp6eWYw0ZwxD5_e90uPc8ATNxaaw'
+            };
+        }
+    </script>
     <script async src="//api.at.samo.io/salemove_integration.js"></script>
 </head>
 <body>
